nav collapse fix for mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -23,9 +23,9 @@ body {
   overflow-x: hidden;
 }
 
-body.noverflow {
+/* body.noverflow {
   overflow: hidden;
-}
+} */
 
 div.beginning {
   background: url(../components/assets/home-bg.jpg) no-repeat center center/cover,
